Fixes for iPhone/iPad Mini alignment issues..

--- a/HexiCloud/public_html/components/trainnavigation/trainnavigation.css
+++ b/HexiCloud/public_html/components/trainnavigation/trainnavigation.css
@@ -7,6 +7,7 @@
     background-color: rgba(216, 225, 229, 1);
     position: fixed;
     width: 100%;
+    height: 65px;
     top: 80px;
     z-index: 9997;
 }
