--- a/HexiCloud/public_html/css/hc-usecases.css
+++ b/HexiCloud/public_html/css/hc-usecases.css
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
 .useCases-page {
-    padding-top: 30px;
+    padding: 10px;
 }
 
 .use-case hr {
